Updated to Java 17 main features